--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 body { 
-  background-color: navy;
-  font-family:
+  background-color: grey;
+  font-family: Arial, Helvetica, sans-serif;
+}
+h1 { 
+  color: mediumaquamarine;
+  text-align: center;
 }
