--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-body { 
-  background-color: grey;
-  font-family: Arial, Helvetica, sans-serif;
+body{
+    background-color: mediumslateblue;
+    font-family: Arial, Helvetica, sans-serif;
 }
-h1 { 
-  color: mediumaquamarine;
-  text-align: center;
+h1 {
+    color:darksalmon;
+    text-align: center;
 }
