--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 body{
-    background-color: mediumslateblue;
+    background-color: rgb(79, 78, 79);
     font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-    color:darksalmon;
+    color:lightseagreen;
     text-align: center;
 }
