--- a/csce242/examples/css/styles.css
+++ b/csce242/examples/css/styles.css
@@ -1,10 +1,12 @@
 /* Structure */
-
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
 
 /* Typography */
 h1 {
-    color:cadetblue;
+    color:blue;
 }
 h2 {
-    color:chartreuse
+    color:chartreuse;
 }
