--- a/csce242/examples/css/styles.css
+++ b/csce242/examples/css/styles.css
@@ -2,6 +2,10 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
 }
+div{
+    background:coral;
+    width:70%;
+}
 
 /* Typography */
 h1 {
