--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -3,7 +3,7 @@ body {
     font-family:'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background:url("images/code.jpeg");
     background-size:cover;
-    color: rgb(50, 132, 241);
+    color:#5c86e6;
 
 }
 /* Container for readable content */
@@ -17,31 +17,95 @@ body {
 }
 
 
-/* Headings */
-h1 {
-    color: #1a3d6d;
+/* Header */
+header {
+    background:#247C63;
+    color: white;
     text-align: center;
+    padding: 10px;;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+}
+
+header h1 {
+    margin: 0;
+    font-size: 32px;
+}
+
+header h2 {
+    margin: 5px 0;
+}
+
+header a {
+    color: #fffbcc;
+    font-weight: bold;
+    text-decoration: none;
+}
+
+header a:hover {
+    text-decoration: underline;
+}
+
+/* Main */
+main {
+    max-width: 1200px;
+    margin: auto;
+    padding: 32px;
 }
 
 h2 {
-    color: #2c6e91;
-    margin-top: 20px;
     text-align: center;
+    margin-bottom: 24px;
 }
 
-/* Links */
-a {
-    text-decoration: none;   /* removes underline */
-    font-weight: bold;
-    text-align: center;
+/* Assignment Cards */
+.assignments {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: center;
 }
 
-p {
-    text-align: center;
+.card {
+    background:#025928;
+    border-radius: 16px;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    overflow: hidden;
+   
+    width: 300px;
+    display: flex;
+    flex-direction: column;
 }
 
-ol {
-    list-style: none;        /* remove numbers */
-    padding: 0;
-    text-align: center;      /* center the items */
+.card:hover {
+   
+}
+
+.card img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+}
+
+.card-content {
+    padding: 16px;
+}
+
+.card h3 {
+    margin-top: 0;
+    color: #4f46e5;
+}
+
+.card a {
+    text-decoration: none;
+    color: #4f46e5;
+}
+
+.card a:hover {
+    text-decoration: underline;
+}
+
+.card p {
+    font-size: 15px ;
+    line-height: 1.4;
+    margin: 8px 0 0;
 }
