--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -58,7 +58,7 @@ h2 {
 }
 
 /* Assignment Cards */
-.assignments {
+.assignments, .projects {
     display: flex;
     flex-wrap: wrap;
     gap: 24px;
