--- a/csce242/examples/04_js/styles.css
+++ b/csce242/examples/04_js/styles.css
@@ -232,7 +232,22 @@ header h1 {
 footer p {
     text-align:center;
 }
+.clicked {
+    background: magenta;
+    color: white;
+}
 
+.happy {
+    background: yellow;
+    color: black;
+    border: 2px dotted orange;
+}
+
+.sad {
+    background: blue;
+    color: white;
+    border: 2px solid skyblue;
+}
 #map {
     width:100%;
     height:500px;
