--- a/csce242/assignments/05javascript/styles.css
+++ b/csce242/assignments/05javascript/styles.css
@@ -26,7 +26,7 @@
   }
   /* === END RESET CSS === */
   
-  /* === YOUR PROJECT STYLES START HERE === */
+  /* === MY PROJECT STYLES START HERE === */
   body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #f0f9ff;         /* light blue background */
